--- a/index.css
+++ b/index.css
@@ -10,11 +10,11 @@
 }
 
 body {
-  background: #000000;
   font-family: var(--font-family);
   line-height: 1.5;
   font-weight: 400;
   color: var(--text-color);
+  background-color: var(--background-color);
   margin: 0;
   display: flex;
   place-items: center;
