--- a/src/Pages/Friends/Containers/ViewSection/ViewSection.css
+++ b/src/Pages/Friends/Containers/ViewSection/ViewSection.css
@@ -86,3 +86,167 @@
     transform: translateY(-5px);
   }
 }
+
+@media  (max-height: 670px) {
+
+  .arrow,.arrow-1,.arrow-2,.arrow-3 {
+    width: 13px;
+    height: 13px;
+  }
+
+  .view-friends-container {
+    width: 375px;
+    margin-top: 5px;
+  }
+
+
+  .friends-card {
+    width: 325px;
+    background: #0f0f0f;
+    border-radius: 0.75rem;
+    padding: 1.5rem;
+    margin: 0 auto;
+  }
+
+  .friends-header {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 0.8rem;
+  }
+
+  .friends-icon {
+    background: rgba(255, 250, 138, 0.2);
+    border-radius: 9999px;
+    width: 3rem;
+    height: 3rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-shrink: 0;
+  }
+
+  .friends-info {
+    flex: 1;
+  }
+
+  .friends-title {
+    color: white;
+    font-size: 1rem;
+    font-weight: 500;
+    margin-bottom: 0.25rem;
+  }
+
+  .friends-count {
+    font-size: 0.800rem;
+    color: #B9BBBC;
+  }
+
+  .friends-description {
+    color: #B9BBBC;
+    font-size: 0.875rem;
+    line-height: 1.5;
+  }
+
+  .arrow-indicator {
+    display: flex;
+    justify-content: center;
+    margin-top: 1rem;
+    gap: 8px;
+  }
+
+  @keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+      transform: translateY(0);
+      opacity: 1;
+    }
+    40% {
+      transform: translateY(-5px);
+    }
+    60% {
+      transform: translateY(-5px);
+    }
+  }
+
+}
+
+
+@media (min-height: 790px) and (max-height: 800px) {
+  
+  .arrow-indicator {
+    display: flex;
+    justify-content: center;
+    margin-top: 1rem;
+    gap: 8px;
+  }
+
+}
+
+@media (min-height: 890px) and (max-height: 940px) {
+  .arrow-indicator {
+    display: flex;
+    justify-content: center;
+    margin-top: 3rem;
+    gap: 8px;
+  }
+
+  .arrow,.arrow-1,.arrow-2,.arrow-3 {
+    width: 45px;
+    height: 45px;
+  }
+
+  .view-friends-container {
+    width: 375px;
+    margin: 30px auto 0;
+  }
+
+  .friends-card {
+    height: 170px;
+    width: 325px;
+    background: #0f0f0f;
+    border-radius: 0.75rem;
+    padding: 1.5rem;
+    margin: 0 auto;
+  }
+
+  .friends-header {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    margin-bottom: 2rem;
+  }
+
+  .friends-icon {
+    background: rgba(255, 250, 138, 0.2);
+    border-radius: 9999px;
+    width: 4.5rem;
+    height: 4.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-shrink: 0;
+  }
+
+  .friends-info {
+    flex: 1;
+  }
+
+  .friends-title {
+    color: white;
+    font-size: 1.125rem;
+    font-weight: 500;
+    margin-bottom: 0.55rem;
+  }
+
+  .friends-count {
+    font-size: 0.875rem;
+    color: #B9BBBC;
+  }
+
+  .friends-description {
+    color: #B9BBBC;
+    font-size: 0.875rem;
+    line-height: 1.5;
+  }
+
+}
