--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -148,3 +148,93 @@
   70% { box-shadow: 0 0 0 10px rgba(59, 130, 246, 0); }
   100% { box-shadow: 0 0 0 0 rgba(59, 130, 246, 0); }
 }
+
+@media  (max-height: 670px) {
+  .squares-container {
+    width: 370px;
+    display: flex;
+    margin-top: 5px;
+    flex-direction: column;
+    gap: 5px;
+    flex: 1;
+    height: auto;
+  }
+
+  .square-row {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+  }
+
+  .square {
+    width: 60px;
+    height: 37px;
+    cursor: pointer;
+    border-radius: 10px;
+    position: relative;
+    perspective: 1000px;
+    transform-style: preserve-3d;
+    transition: transform 0.3s ease;
+  }
+
+}
+
+
+@media (min-height: 790px) and (max-height: 800px) {
+  .squares-container {
+    width: 365px;
+    display: flex;
+    margin-top: 10px;
+    flex-direction: column;
+    gap: 8px;
+    flex: 1;
+    height: auto;
+  }
+
+  .square-row {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+  }
+
+  .square {
+    width: 55px;
+    height: 55px;
+    cursor: pointer;
+    border-radius: 10px;
+    position: relative;
+    perspective: 1000px;
+    transform-style: preserve-3d;
+    transition: transform 0.3s ease;
+  }
+
+}
+
+@media (min-height: 890px) and (max-height: 940px) {
+  .squares-container {
+    width: 385px;
+    display: flex;
+    margin-top: 20px;
+    flex-direction: column;
+    gap: 20px;
+    flex: 1;
+    height: auto;
+  }
+
+  .square-row {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+  }
+
+  .square {
+    width: 65px;
+    height: 65px;
+    cursor: pointer;
+    border-radius: 10px;
+    position: relative;
+    perspective: 1000px;
+    transform-style: preserve-3d;
+    transition: transform 0.3s ease;
+  }
+}
