--- a/src/Pages/Store/Store.css
+++ b/src/Pages/Store/Store.css
@@ -113,3 +113,50 @@
     transform: translateY(-2px);
     box-shadow: 0 5px 15px rgba(255, 165, 0, 0.4);
 }
+
+@media  (max-height: 670px) {
+  .store-content {
+    width: 100%;
+    flex-grow: 1;
+    padding: 80px 5px 100px;
+    display: flex;
+    justify-content: center;
+    box-sizing: border-box;
+  }
+  .gift-card {
+    background-color: #0f0f0f;
+    border-radius: 15px;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid #121212;
+    height: 280px;
+    width: 176px;
+    box-sizing: border-box;
+  }
+}
+
+
+@media (min-height: 890px) and (max-height: 940px) {
+  .store-content {
+    width: 100%;
+    flex-grow: 1;
+    padding: 80px 15px 100px;
+    display: flex;
+    justify-content: center;
+    box-sizing: border-box;
+  }
+  .gift-card {
+    background-color: #0f0f0f;
+    border-radius: 15px;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid #121212;
+    height: 280px;
+    width: 184px;
+    box-sizing: border-box;
+  }
+}
