--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -22,6 +22,11 @@
   background: #000000;
 }
 
+.no-scroll {
+  overflow: hidden;
+}
+
+
 /* Контейнер с игровыми блоками */
 .squares-container {
   width: 370px;
